# spade

./: .cirrus.yml  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE2.0.txt  LICENSE-MIT.txt  Makefile  README.md  _typos.toml  check_coverage  install-pre-commit  lifeguard.toml  pre-commit  run_ci  test.fil  test.sp  test.spade
1dpong/: Makefile  pins.pcf  top.v
mir-to-filament/: Cargo.toml
mir-to-filament/resources/: prelude.fil  prelude.sv
mir-to-filament/src/: lib.rs
parse_tree_macros/: Cargo.toml
parse_tree_macros/src/: lib.rs
spade-ast/: Cargo.toml
spade-ast-lowering/: Cargo.toml
spade-ast-lowering/src/: attributes.rs  builtins.rs  comptime.rs  error.rs  error_reporting.rs  global_symbols.rs  lib.rs  pipelines.rs  symbol_table.rs  testutil.rs  types.rs
spade-ast/src/: comptime.rs  lib.rs  testutil.rs
spade-common/: Cargo.toml
spade-common/src/: error-reporting.rs  error_reporting.rs  id_tracker.rs  lib.rs  location_info.rs  name.rs  namespace.rs  num_ext.rs  symbol_table.rs
spade-compiler/: Cargo.toml
spade-compiler/goldentests/errors/: missing_type.rs
spade-compiler/prelude/: prelude.spade
spade-compiler/src/: compiler_state.rs  golden.rs  lib.rs  location_info.rs  main.rs  name_dump.rs  namespaced_file.rs  types.rs
spade-compiler/stdlib/: cdc.spade  conv.spade  io.spade  mem.spade  ops.spade  option.spade
spade-cxx/: Cargo.toml  build.rs
spade-cxx/src/: lib.rs  spade.rs
spade-diagnostics/: Cargo.toml
spade-diagnostics/src/: diagnostic.rs  lib.rs
spade-diagnostics/src/emitter/: codespan_emitter.rs  mod.rs  panik.rs
spade-diagnostics/src/snapshots/: spade_diagnostics__tests__bug_diagnostics_works.snap
spade-error-reporting/: Cargo.toml
spade-error-reporting/src/: lib.rs
spade-hir/: Cargo.toml
spade-hir-codegen/: Cargo.toml
spade-hir-codegen/src/: lib.rs
spade-hir-lowering/: Cargo.toml
spade-hir-lowering/src/: attributes.rs  error.rs  error_reporting.rs  lib.rs  method_lowering.rs  monomorphisation.rs  name_map.rs  pass.rs  pattern.rs  pipelines.rs  statement_list.rs  substitution.rs  usefulness.rs
spade-hir-lowering/src/affine_check/: affine_state.rs  mod.rs
spade-hir-lowering/src/linear_check/: linear_state.rs  mod.rs
spade-hir-lowering/src/passes/: disallow_inout_bindings.rs  flatten_regs.rs  lower_methods.rs  mod.rs  pass.rs
spade-hir/src/: expression.rs  lib.rs  param_util.rs  symbol_table.rs  testutil.rs  util.rs
spade-macros/: Cargo.toml
spade-macros/src/: lib.rs
spade-macros/tests/ui/: missing_outer_attr.rs  missing_outer_attr.stderr  missing_primary_span.rs  missing_primary_span.stderr  not_named_fields.stderr  wrong_attribute_format.rs  wrong_attribute_format.stderr  wrong_inner_attribute_format.stderr  wrong_outer_attribute_format.stderr
spade-mir/: Cargo.toml
spade-mir/src/: aliasing.rs  assertion_codegen.rs  codegen.rs  diff.rs  diff_printing.rs  enum_util.rs  eval.rs  lexer.rs  lib.rs  macros.rs  parser.rs  renaming.rs  type_list.rs  types.rs  unit_name.rs  util.rs  verilator_wrapper.rs  verilog.rs  wal.rs
spade-mir/src/codegen/: mod.rs  util.rs
spade-mir/src/passes/: auto_clock_gating.rs  lib.rs  mod.rs
spade-parser/: Cargo.toml
spade-parser/src/: ast.rs  comptime.rs  error.rs  error_reporting.rs  expression.rs  item_type.rs  lexer.rs  lib.rs  testutil.rs
spade-python/: .gitignore  Cargo.toml  build.rs  pyproject.toml
spade-python/python/spade/: __init__.py
spade-python/spade/: __init__.py
spade-python/src/: lib.rs
spade-simulation-ext/: Cargo.toml
spade-simulation-ext/src/: lib.rs
spade-tests/: Cargo.toml
spade-tests/goldentests/errors/: int_size_mismatch.spade
spade-tests/parser_test_code/: entity_with_inputs.sp
spade-tests/src/: affine_check.rs  ast_lowering.rs  compiler_state.rs  const_generics.rs  errors.rs  hir_codegen.rs  hir_lowering.rs  integration.rs  lib.rs  linear_check.rs  parser.rs  ports_integration.rs  suggestions.rs  typeinference.rs  usefulness.rs  verilator_wrapper.rs  wal_tracing.rs  wordlength_inference.rs
spade-tests/src/snapshots/: spade_tests__affine_check__checking_works_with_decld_value.snap  spade_tests__affine_check__consuming_a_field_produces_an_error_when_consuming_whole_struct.snap  spade_tests__affine_check__destructuring_affine_type_requires_use_of_subtypes.snap  spade_tests__affine_check__double_consumption_of_identifier_produces_error.snap  spade_tests__affine_check__double_consumption_of_identifier_produces_error_in_array.snap  spade_tests__affine_check__double_tuple_consumption_causes_error.snap  spade_tests__affine_check__function_calls_consume_ports.snap  spade_tests__affine_check__more_than_one_field_consumption_causes_error.snap  spade_tests__affine_check__unused_anonymous_expression_is_reported.snap  spade_tests__affine_check__unused_field_causes_error.snap  spade_tests__affine_check__unused_resource_causes_error.snap  spade_tests__affine_check__unused_transitive_field_causes_error.snap  spade_tests__affine_check__unused_transitive_tuple_member_causes_error.snap  spade_tests__affine_check__unused_tuple_member_causes_error.snap  spade_tests__affine_check__using_a_single_affine_field_does_not_use_the_whole_struct.snap  spade_tests__ast_lowering__access_undefined_pipeline_reg.snap  spade_tests__ast_lowering__builtin_fn_methods_produce_error.snap  spade_tests__ast_lowering__builtin_pipeline_methods_produce_error.snap  (+627 more)
spade-testutil/: Cargo.toml
spade-testutil/src/: lib.rs
spade-typeinference/: Cargo.toml  testutil.rs
spade-typeinference/src/: constraints.rs  dump.rs  equation.rs  error.rs  error_reporting.rs  expression.rs  fixed_types.rs  lib.rs  method_resolution.rs  mir_type_lowering.rs  pipeline.rs  requirements.rs  result.rs  testutil.rs  trace_stack.rs  traits.rs
spade-types/: Cargo.toml
spade-types/src/: lib.rs  meta_types.rs
spade-wordlength-inference/: Cargo.toml
spade-wordlength-inference/src/: affine.rs  error.rs  inferer.rs  lib.rs  range.rs
vcd-translate/: Cargo.toml  memory_tb.vcd  out.vcd
vcd-translate/src/: main.rs  translation.rs
(+245 files in other folders)
