[workspace]

members = [
    "spade-*",
    "vcd-translate",
    "parse_tree_macros"
]

# Unless otherwise specified, only build workspace members which requires no external
# programs to be installed (yosys for spade-cxx, maturin etc. for spade-python)
default-members = [
    "spade-compiler",
    "vcd-translate",
]

# Shared between internal crates. Can be overridden per-crate if needed.

[workspace.package]
version = "0.1.0"
license = "EUPL-1.2"
edition = "2021"
rust-version = "1.64" # workspade-inheritance is only supported in 1.64

[workspace.dependencies]
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
codespan = { git = "https://gitlab.com/spade-lang/codespan.git", features=["serialization"] }
codespan-reporting = { git = "https://gitlab.com/spade-lang/codespan.git" }
colored = "2.0"
indoc = "1.0"
insta = "1.14.0"
itertools = "0.10.3"
local-impl = { git = "https://gitlab.com/sornas/local-impl" }
logos = "0.11"
pretty_assertions = "0.6.0"
prettydiff = { version = "0.6.1", default-features = false }
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.20"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = { git = "https://github.com/jonathanmorley/tracing-tree", rev = "8b97ec6e50e3f755644d1a0aaf4c45a2112607b2" }

[patch.crates-io]
codespan = { git = "https://gitlab.com/spade-lang/codespan.git" }
codespan-reporting = { git = "https://gitlab.com/spade-lang/codespan.git" }
local-impl = {git = "https://gitlab.com/sornas/local-impl"}
