[workspace]

members = [
    "spade-*",
    "vcd-translate",
]

resolver = "2"

# Shared between internal crates. Can be overridden per-crate if needed.

[workspace.package]
version = "0.6.0"
license = "EUPL-1.2"
edition = "2021"
rust-version = "1.64" # workspade-inheritance is only supported in 1.64

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.1"
codespan = { git = "https://gitlab.com/spade-lang/codespan.git", branch = "master", features = ["serialization"] }
codespan-reporting = { git = "https://gitlab.com/spade-lang/codespan.git", branch = "master" }
colored = "2.1"
indoc = "2.0"
insta = "1.14.0"
itertools = "0.12"
local-impl = { git = "https://gitlab.com/sornas/local-impl" }
logos = "0.13.0"
num = {version = "0.4.0", features = ["serde"]}
pretty_assertions = "1.3.0"
prettydiff = { version = "0.6.1", default-features = false }
ron = {version = "0.8.0", features=["integer128"]}
serde = { version = "1.0.136", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.20"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = { git = "https://github.com/jonathanmorley/tracing-tree", rev = "8b97ec6e50e3f755644d1a0aaf4c45a2112607b2" }

spade-compiler = "../spade-compiler"
