[package]
name = "spade-ast-lowering"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
codespan = "0.9"
codespan-reporting = "0.9"

spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}

[dev-dependencies]
spade-testutil = {path = "../spade-testutil"}
pretty_assertions = "0.6"
matches = "0.1"
