[package]
name = "spade-ast-lowering"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
codespan = "0.12.0"
codespan-reporting = "0.12.0"
tracing = "0.1.34"

spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}

[dev-dependencies]
# spade-testutil = {path = "../spade-testutil"}
pretty_assertions = "0.6"
matches = "0.1"
