[package]
name = "spade-ast-lowering"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
thiserror.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true
tracing.workspace = true

spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}

[dev-dependencies]
# spade-testutil = {path = "../spade-testutil"}
pretty_assertions.workspace = true
matches = "0.1"
