[package]
name = "spade-common"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
logos = "0.11.4"
serde = {version = "1.0.136", features = ["derive"]}
