[package]
name = "spade-common"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan.workspace = true
codespan-reporting.workspace = true
logos.workspace = true
serde.workspace = true
tracing.workspace = true
num.workspace = true
