[package]
name = "spade"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored.workspace = true
logos.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true
clap.workspace = true
serde.workspace = true

color-eyre.workspace = true
thiserror.workspace = true

indoc.workspace = true
ron.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

spade-ast = {path = "../spade-ast"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
spade-common = {path = "../spade-common"}
spade-diagnostics = { path = "../spade-diagnostics" }
spade-hir = {path = "../spade-hir"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-macros = {path = "../spade-macros"}
spade-mir = {path = "../spade-mir"}
spade-parser = {path = "../spade-parser"}
spade-typeinference = {path = "../spade-typeinference"}
spade-types = {path = "../spade-types"}


[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
