[package]
name = "spade"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
codespan-reporting.workspace = true
codespan.workspace = true
color-eyre.workspace = true
colored.workspace = true
indoc.workspace = true
itertools.workspace = true
logos.workspace = true
ron.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true

atty = "0.2.14"

spade-ast = {path = "../spade-ast"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
spade-common = {path = "../spade-common"}
spade-diagnostics = { path = "../spade-diagnostics" }
spade-hir = {path = "../spade-hir"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-macros = {path = "../spade-macros"}
spade-mir = {path = "../spade-mir"}
spade-parser = {path = "../spade-parser"}
spade-typeinference = {path = "../spade-typeinference"}
spade-wordlength-inference = {path = "../spade-wordlength-inference"}
spade-types = {path = "../spade-types"}


[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
