[package]
name = "spade-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan.workspace = true
codespan-reporting.workspace = true
colored.workspace = true
local-impl.workspace = true
logos.workspace = true
thiserror.workspace = true
tracing.workspace = true

spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
spade-macros = {path = "../spade-macros"}

[dev-dependencies]
insta.workspace = true
