[package]
name = "spade-error-reporting"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.9"
codespan-reporting = "0.9"

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
spade-hir-codegen = {path = "../spade-hir-codegen"}
spade-typeinference = {path = "../spade-typeinference"}
spade-parser = {path = "../spade-parser"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
