[package]
name = "spade-hir-codegen"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
spade-typeinference = {path = "../spade-typeinference"}

[dev-dependencies]
prettydiff = "0.3.1"
pretty_assertions = "0.6"
colored = "2.0"
spade-error-reporting = {path = "../spade-error-reporting"}
spade-testutil = {path = "../spade-testutil"}
