[package]
name = "spade-hir-lowering"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan = "0.12.0"
codespan-reporting = "0.12.0"
indoc = "1.0"
itertools = "0.10.3"
local-impl = "0.1.0"
thiserror = "1.0.20"

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
spade-mir = {path = "../spade-mir"}
spade-typeinference = {path = "../spade-typeinference"}

[dev-dependencies]
prettydiff = { version = "0.6.1", default-features = false }
pretty_assertions = "0.6"
colored = "2.0"
