[package]
name = "spade-hir-lowering"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan.workspace = true
codespan-reporting.workspace = true
indoc.workspace = true
itertools.workspace = true
local-impl.workspace = true
thiserror.workspace = true
tracing.workspace = true

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
spade-mir = {path = "../spade-mir"}
spade-typeinference = {path = "../spade-typeinference"}

[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
colored.workspace = true
