[package]
name = "spade-hir-lowering"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
itertools.workspace = true
local-impl.workspace = true
num.workspace = true
serde.workspace = true
tracing.workspace = true

spade-common = {path = "../spade-common"}
spade-diagnostics = { path = "../spade-diagnostics" }
spade-hir = {path = "../spade-hir"}
spade-mir = {path = "../spade-mir"}
spade-typeinference = {path = "../spade-typeinference"}
spade-types = {path = "../spade-types"}
spade-wordlength-inference = {path = "../spade-wordlength-inference"}

[dev-dependencies]
prettydiff.workspace = true
pretty_assertions.workspace = true
colored.workspace = true
