[package]
name = "spade-hir"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored = "2.0"
thiserror = "1.0"
tracing = "0.1.35"
codespan-reporting = "0.12.0"
serde = {version = "1.0.136", features = ["derive"]}
itertools = "0.10.3"

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
