[package]
name = "spade-hir"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored.workspace = true
thiserror.workspace = true
tracing.workspace = true
codespan-reporting.workspace = true
serde.workspace = true
itertools.workspace = true
local-impl.workspace = true

spade-common = {path = "../spade-common"}
spade-diagnostics = {path = "../spade-diagnostics"}
spade-types = {path = "../spade-types"}
