[package]
name = "spade-mir"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
logos.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true
indoc.workspace = true
nesty = "0.2"
itertools.workspace = true
serde.workspace = true
num.workspace = true
derive-where = "1.2.7"

spade-common = { path = "../spade-common" }
spade-diagnostics = { path = "../spade-diagnostics" }
spade-macros = { path = "../spade-macros" }

[dev-dependencies]
colored.workspace = true
prettydiff.workspace = true
pretty_assertions.workspace = true
