[package]
name = "spade-parser"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
logos = "0.11"
thiserror = "1.0.20"
codespan = "0.9"

spade-common = {path = "../spade-common"}
parse_tree_macros = {path = "../parse_tree_macros"}

[dev-dependencies]
spade-testutil = {path = "../spade-testutil"}
