[package]
name = "spade-parser"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan = "0.12.0"
codespan-reporting = "0.12.0"
colored = "2.0"
logos = "0.11"
thiserror = "1.0.20"
tracing = "0.1.34"

spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
parse_tree_macros = {path = "../parse_tree_macros"}
