[package]
name = "spade-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spade"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module", "eyre"] }
spade = {path = "../spade-compiler"}
ron.workspace = true
color-eyre.workspace = true
logos.workspace = true
itertools.workspace = true
codespan-reporting.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true

spade-common = {path = "../spade-common"}
spade-hir = {path = "../spade-hir"}
spade-ast = {path = "../spade-ast"}
spade-types = {path = "../spade-types"}
spade-parser = {path = "../spade-parser"}
spade-typeinference = {path = "../spade-typeinference"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-mir = {path = "../spade-mir"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
vcd-translate = {path = "../vcd-translate"}
