[build-system]
requires = ["maturin>=1.2.3,<1.3.0"]
build-backend = "maturin"

[project]
name = "spade"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cocotb~=1.7.2", "ansicolors>=1.1.8"]

[tool.maturin]
python-source = "python"
