[package]
name = "spade-simulation-ext"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting.workspace = true
color-eyre.workspace = true
itertools.workspace = true
logos.workspace = true
num.workspace = true
pyo3 = { workspace = true, optional = true }
ron.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
tracing.workspace = true

spade = {path = "../spade-compiler"}
spade-ast = {path = "../spade-ast"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
spade-common = {path = "../spade-common"}
spade-diagnostics = {path = "../spade-diagnostics"}
spade-hir = {path = "../spade-hir"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-mir = {path = "../spade-mir"}
spade-parser = {path = "../spade-parser"}
spade-typeinference = {path = "../spade-typeinference"}
spade-types = {path = "../spade-types"}
vcd-translate = {path = "../vcd-translate"}

[features]
python = ["pyo3"]
