[package]
name = "spade-tests"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan-reporting.workspace = true
logos.workspace = true
indoc.workspace = true

spade-ast-lowering = {path = "../spade-ast-lowering"}
spade-parser = {path = "../spade-parser"}
spade-common = {path = "../spade-common"}
spade-hir = {path = "../spade-hir"}
spade-mir = {path = "../spade-mir"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-typeinference = {path = "../spade-typeinference"}
spade = {path = "../spade-compiler"}

[dev-dependencies]
insta = "1.14.0"
unindent = "0.1.8"
colored.workspace = true
prettydiff.workspace = true

