[package]
name = "spade-testutil"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
logos = "0.11"

spade-common = {path = "../spade-common"}
spade-parser = {path = "../spade-parser"}
spade-hir = {path = "../spade-hir"}
spade-typeinference = {path = "../spade-typeinference"}
spade-builtins = {path = "../spade-builtins"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
parse_tree_macros = {path = "../parse_tree_macros"}
