[package]
name = "spade-testutil"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
codespan-reporting = "0.11.0"
logos = "0.11"

spade-common = {path = "../spade-common"}
spade-parser = {path = "../spade-parser"}
spade-hir = {path = "../spade-hir"}
spade-ast = {path = "../spade-ast"}
spade-typeinference = {path = "../spade-typeinference"}
spade-ast-lowering = {path = "../spade-ast-lowering"}
parse_tree_macros = {path = "../parse_tree_macros"}
