[package]
name = "spade-typeinference"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored = "2.0"
thiserror = "1.0.20"
codespan-reporting = "0.11.1"
codespan = "0.11.1"
serde = {version = "1.0.136", features = ["derive"]}

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
parse_tree_macros = {path = "../parse_tree_macros"}

[dev-dependencies]
spade-ast = {path = "../spade-ast"}
assert_matches = "1.5"
