[package]
name = "spade-typeinference"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
codespan.workspace = true
serde.workspace = true
tracing.workspace = true
local-impl.workspace = true

spade-common = {path = "../spade-common"}
spade-types = {path = "../spade-types"}
spade-hir = {path = "../spade-hir"}
parse_tree_macros = {path = "../parse_tree_macros"}

[dev-dependencies]
spade-ast = {path = "../spade-ast"}
assert_matches = "1.5"
spade-ast-lowering = {path = "../spade-ast-lowering"}
