[package]
name = "spade-types"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}

spade-common = {path = "../spade-common"}
