[package]
name = "spade-wordlength-inference"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>", "FredTheDino <edvard.thornros@gmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
colored.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
codespan.workspace = true
serde.workspace = true
tracing.workspace = true
local-impl.workspace = true
num.workspace = true

spade-ast = {path = "../spade-ast"}
spade-common = {path = "../spade-common"}
spade-hir = {path = "../spade-hir"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-macros = {path = "../spade-macros"}
spade-parser = {path = "../spade-parser"}
spade-typeinference = {path = "../spade-typeinference"}
spade-types = {path = "../spade-types"}
spade-diagnostics = {path = "../spade-diagnostics"}
