[package]
name = "spade-wordlength-inference"
version.workspace = true
authors = ["TheZoq2 <frans.skarman@protonmail.com>", "FredTheDino <edvard.thornros@gmail.com>"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
num.workspace = true

spade-common = {path = "../spade-common"}
spade-hir = {path = "../spade-hir"}
spade-macros = {path = "../spade-macros"}
spade-typeinference = {path = "../spade-typeinference"}
spade-types = {path = "../spade-types"}
spade-diagnostics = {path = "../spade-diagnostics"}
