[package]
name = "vcd-translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcd = "0.6.1"
color-eyre = "0.6.1"
clap = {version = "3.1.8", features = ["derive"]}
ron = "0.7.0"
num = "0.4.0"
itertools = "0.10.3"

spade-mir = {path = "../spade-mir"}
spade-types = {path = "../spade-types"}
spade-typeinference = {path = "../spade-typeinference"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-common = {path = "../spade-common"}
spade-ast = {path = "../spade-ast"}
