[package]
name = "vcd-translate"
version = "0.1.0"
edition = "2021"
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcd = "0.6.1"
color-eyre.workspace = true
clap.workspace = true
ron.workspace = true
num.workspace = true
itertools.workspace = true

spade-mir = {path = "../spade-mir"}
spade-types = {path = "../spade-types"}
spade-typeinference = {path = "../spade-typeinference"}
spade-hir-lowering = {path = "../spade-hir-lowering"}
spade-common = {path = "../spade-common"}
spade = {path = "../spade-compiler"}
spade-ast = {path = "../spade-ast"}
